RESOLVED FIXED149415
REGRESSION (r182648): UIWebView does not set location.hash synchronously
https://bugs.webkit.org/show_bug.cgi?id=149415
Summary REGRESSION (r182648): UIWebView does not set location.hash synchronously
Alexey Proskuryakov
Reported 2015-09-21 14:01:06 PDT
Attachments
proposed fix (1.60 KB, patch)
2015-09-21 14:07 PDT, Alexey Proskuryakov
no flags
adding a test (3.06 KB, patch)
2015-09-21 18:08 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2015-09-21 14:07:14 PDT
Created attachment 261684 [details] proposed fix
Darin Adler
Comment 2 2015-09-21 16:33:52 PDT
Is there some way to regression-test this?
WebKit Commit Bot
Comment 3 2015-09-21 17:21:41 PDT
Comment on attachment 261684 [details] proposed fix Clearing flags on attachment: 261684 Committed r190092: <http://trac.webkit.org/changeset/190092>
WebKit Commit Bot
Comment 4 2015-09-21 17:21:45 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2015-09-21 17:40:39 PDT
I'm looking into what's going on with a test. There is already one that should cover this, but it doesn't fail for some reason, still not sure why.
Alexey Proskuryakov
Comment 6 2015-09-21 17:51:23 PDT
It's because the bug would only occur when processing a user gesture.
Alexey Proskuryakov
Comment 7 2015-09-21 18:07:52 PDT
EventSender is not implemented on iOS for WebKit2, but it is for WebKit1, which happens to be what we need.
Alexey Proskuryakov
Comment 8 2015-09-21 18:08:45 PDT
Created attachment 261709 [details] adding a test
WebKit Commit Bot
Comment 9 2015-09-21 20:06:23 PDT
Comment on attachment 261709 [details] adding a test Clearing flags on attachment: 261709 Committed r190100: <http://trac.webkit.org/changeset/190100>
WebKit Commit Bot
Comment 10 2015-09-21 20:06:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.