Source/WebKit/mac/WebCoreSupport/WebFrameLoaderClient.mm
@@ -886,6 +886,9 @@ static BOOL shouldTryAppLink(WebView *webView, const NavigationAction& action, F
     if (!action.processingUserGesture())
         return NO;
 
+    if (targetFrame && targetFrame->document() && protocolHostAndPortAreEqual(targetFrame->document()->url(), action.url()))
+        return NO;
+
     return YES;
 #else
     return NO;
